Fix homepage spacing

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -149,7 +149,7 @@ img.expand{
 }
 
 #homepage {
-  width: 100%;
+  width: 80%;
   background-color: lightgreen;
   padding: 30px;
   margin-right: 30px;
@@ -167,7 +167,7 @@ img.expand{
 }
 
 #notebook h1{
-    margin-left: 50px;
+    margin-left: 5px;
     margin-top: -25px;
     padding-bottom: 20px;
     font-weight: normal;
